deployment/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderfront-service
  labels:
    app: order-front
spec:
  #type: ClusterIP
  selector:
    app: order-front
  ports:
    - protocol: TCP
      port: 7778
      targetPort: 8080
