deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-app
  namespace: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-app
  template:
    metadata:
      labels:
        app: restaurant-app
    spec:
      containers:
      - name: frontend-container
        image: public.ecr.aws/u2q1a2y8/restaurant-frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
#          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: restaurant
  labels:
    app: restaurant-app
spec:
  type: ClusterIP
  selector:
    app: restaurant-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      port: 7778
#      targetPort: 8080
