deployment/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
spec: 
  ingressClassName: nginx
  rules:
  - host: "ce5-group2-food.sctp-sandbox.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: orderfront-service
              port:
                number: 7778
